Fix wording about 5 ether

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 					<div class="col-md-6 intro-feature">
 						<i class="font-icon ion-lock-combination"></i>
 						<h5>Secure</h5>
-						<p>Each unscratched card's security is guaranteed for up to 5 ether.</p>
+						<p>Each unscratched card's security is guaranteed by a smart contract.</p>
 					</div>
 				</div>
 			</div>
