More FAQ updates

--- a/index.html
+++ b/index.html
@@ -252,14 +252,15 @@ layout: default
 					<i class="ion-ios-help-outline"></i>
 					<h4>Will you offer more designs?</h4>
 					<div class="answer">
-						<p>Yes! Keep an eye out here, or follow us on Twitter, for more.</p>
+						<p>Yes! Keep an eye out here, or <a href="https://twitter.com/ether_cards">follow us on Twitter</a>, for more.</p>
 					</div>
 				</div>
 				<div class="faq-body">
 					<i class="ion-ios-help-outline"></i>
 					<h4>What about customized cards?</h4>
 					<div class="answer">
-						<p>We're currently gearing up to offer cards with customer-provided artwork, in larger quantities; <a href="mailto:cards@arachnidlabs.com">contact us</a> for more details.</p>
+						<p>Yes! We offer customised cards in quantities starting at 50 using our own printer, and in quantities starting at 500 using professional offset printing. <a href="mailto:cards@arachnidlabs.com">Contact us</a> for more details.</p>
+						<p>We're planning to offer individually customised cards with your photo or image in the very near future.</p>
 					</div>
 				</div>
 				<div class="faq-body">
