--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ layout: default
 					<i class="ion-ios-help-outline"></i>
 					<h4>What about customized cards?</h4>
 					<div class="answer">
-						<p>Yes! We offer customised cards in quantities starting at 50 using our own printer, and in quantities starting at 500 using professional offset printing. <a href="mailto:cards@arachnidlabs.com">Contact us</a> for more details.</p>
-						<p>We're planning to offer individually customised cards with your photo or image in the very near future.</p>
+						<p>Yes! We offer customized cards in quantities starting at 50 using our own printer, and in quantities starting at 500 using professional offset printing. <a href="mailto:cards@arachnidlabs.com">Contact us</a> for more details.</p>
+						<p>We're planning to offer individually customized cards with your photo or image in the very near future.</p>
 					</div>
 				</div>
 				<div class="faq-body">
