--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ layout: default
 				</div>
 				<div class="faq-body">
 					<i class="ion-ios-help-outline"></i>
-					<h4>What about customized cards?</h4>
+					<h4>What about customised cards?</h4>
 					<div class="answer">
 						<p>Yes! We offer customised cards in quantities starting at 50 using our own printer, and in quantities starting at 500 using professional offset printing. <a href="mailto:cards@arachnidlabs.com">Contact us</a> for more details.</p>
 						<p>We're planning to offer individually customised cards with your photo or image in the very near future.</p>
