Update intro to make purchase process clearer

--- a/index.html
+++ b/index.html
@@ -25,40 +25,30 @@ layout: default
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-5 divider40-mobile">
-				<div class="text-justify">
-					<h3 class="left-align">How Ether Cards work</h3>
-					<p>Each card has its own unique Ethereum address, printed on the back in QR code and text form, and a private key, hidden under a scratch-off panel. To use one, simply scan the code, deposit some Ether or tokens using your favourite wallet app, and give it to the lucky recipient.</p>
-					<p>When they want to redeem it, they can scratch off the panel, and use their own wallet app to 'sweep' the funds into their newly created account.</p>
-				</div>
+			<div class="col-md-4 text-center">
+				<i class="font-icon ion-email"></i>
+				<h4>Get your Ether Cards</h4>
+				<p>Buy them <a href="#pricing">here</a> with free shipping.</p>
 			</div>
-			<div class="col-md-6 col-md-offset-1 intro-features">					
-				<div class="row">
-					<div class="col-md-6 intro-feature">
-						<i class="font-icon ion-ios-timer"></i>
-						<h5>Easy to fund</h5>
-						<p>Loading Ether or tokens is as simple as scanning the QR code.</p>
-					</div>
-					<div class="col-md-6 intro-feature">
-						<i class="font-icon ion-happy"></i>
-						<h5>Easy to use</h5>
-						<p>Getting started guides show new users how to set up a wallet and redeem their card.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 intro-feature">
-						<i class="font-icon ion-beer"></i>
-						<h5>Send someone a beer</h5>
-						<p>Ether Cards aren't just for ether - send someone some DigiGold or a BeerCoin just as easily.</p>
-					</div>
-					<div class="col-md-6 intro-feature">
-						<i class="font-icon ion-lock-combination"></i>
-						<h5>Secure</h5>
-						<p>Each unscratched card's security is guaranteed by a smart contract.</p>
-					</div>
-				</div>
+			<div class="col-md-4 text-center">
+				<i class="font-icon ion-card"></i>
+				<h4>Load a card with tokens or Ether</h4>
+				<p>Load an Ether Card from any wallet that supports scanning QR codes.</p>
 			</div>
-		</div>			
+			<div class="col-md-4 text-center">
+				<i class="font-icon ion-happy"></i>
+				<h4>Give it as a gift</h4>
+				<p>The card can be redeemed using My Ether Wallet or our own token sweeping tool.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				<h2>How Ether Cards work</h2>
+				<p>Each card has its own unique Ethereum address, printed on the back in QR code and text form, and a private key, hidden under a scratch-off panel. To use one, simply scan the code, deposit some Ether or tokens using your favourite wallet app, and give it to the lucky recipient.</p>
+				<p>When they want to redeem it, they can scratch off the panel, and use their own wallet app to 'sweep' the funds into their newly created account.</p>
+				<p>Each unscratched card's security is <a href="#faq">guaranteed by a smart contract</a>.</p>
+			</div>
+		</div>
 	</div>
 </section>
 <section id="pricing" class="section paddingbottom-60 bg-grey">
