--- a/index.html
+++ b/index.html
@@ -70,11 +70,29 @@ layout: default
 					</h4>
 					<ul class="table-list">
 						<li>Original ether.cards design</li>
-						<li>Gift envelopes included</li>
+						<li>Gift sleeve included</li>
 						<li>Includes postage anywhere in the world</li>
 					</ul>
 					<div class="table-buy">
 						<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">My Ether Wallet Design</h3>
+					<img src="/img/mew_front.png" style="width: 298px; height: 191px;">
+					<h4 class="price">
+						£3.00<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Limited-edition design for My Ether Wallet</li>
+						<li>Super premium matte finish with foil logo</li>
+						<li>£0.50 from each sale goes to supporting MEW</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 90670371, quantity: 2})">
 					</div>
 				</div>
 			</div>
