--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ layout: default
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
+						<li><b>Backorder - ships September 13</b></li>
 						<li>Limited-edition design for My Ether Wallet</li>
 						<li>Super premium matte finish with foil logo</li>
 						<li>£0.50 from each sale goes to supporting MEW</li>
