--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ layout: default
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
+				<p style="font-weight: bold">Ether Cards is away at DevCon3! Orders placed today will ship on the 8th of November.</p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
