--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@ layout: default
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
-				<p style="font-weight: bold">Ether Cards is away at DevCon3! Orders placed today will ship on the 8th of November.</p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
@@ -94,6 +93,44 @@ layout: default
 					</ul>
 					<div class="table-buy">
 						<input type="button" value="Buy Now" onclick="addProduct({id: 90670371, quantity: 2})">
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">Seasonal Snowflake Design</h3>
+					<img src="/img/snowflake_front.png" style="width: 298px; height: 191px;">
+					<h4 class="price">
+						£2.00<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Clearance - only a few left!</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 95839242, quantity: 2})">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="pricing-wrapper row">
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">Seasonal Trees Design</h3>
+					<img src="/img/trees_front.png" style="width: 298px; height: 191px;">
+					<h4 class="price">
+						£2.00<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Clearance - only a few left!</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 95839254, quantity: 2})">
 					</div>
 				</div>
 			</div>
