--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@ layout: default
 		<div class="pricing-wrapper row">
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
+					<h3 class="pricing-title">Seasonal Design</h3>
+					<img src="/img/xmas-2017.png" style="width: 298px; height: 191px;">
+					<h4 class="price">
+						£3.00<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>2017 Seasonal design with spot gloss snowflakes</li>
+						<li><em>100% of profits to <a href="https://worldbuilders.org/">Worldbuilders</a> charity!</em></li>
+						<li>Gift sleeve &amp; worldwide postage included</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 96580469, quantity: 2})">
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
 					<h3 class="pricing-title">Original Design</h3>
 					<img src="/img/new_front.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
@@ -96,6 +114,8 @@ layout: default
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="pricing-wrapper row">
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Larger Quantities</h3>
