--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@ layout: default
 			</div>
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
-					<h3 class="pricing-title">My Ether Wallet Design</h3>
-					<img src="/img/mew_front.png" style="width: 298px; height: 191px;">
+					<h3 class="pricing-title">My Ether Wallet Xmas Design</h3>
+					<img src="/img/mew_xmas_front.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
 						£3.00<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
-						<li>Limited-edition design for My Ether Wallet</li>
+						<li>Limited-edition seasonal design for My Ether Wallet</li>
 						<li>Super premium matte finish with foil logo</li>
 						<li>£0.50 from each sale goes to supporting MEW</li>
 					</ul>
 					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 90670371, quantity: 2})">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 97486127, quantity: 2})">
 					</div>
 				</div>
 			</div>
