--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
-				<p>Thinking of giving a Crypto Kitty for Xmas? See <a href="https://medium.com/@judithESSS/how-to-get-started-with-cryptokitties-sitting-on-ether-cards-e03fb5aba28b">this great community guide</a> for how!</p>
+				<p>Thinking of giving a Crypto Kitty for the holidays? See <a href="https://medium.com/@judithESSS/how-to-get-started-with-cryptokitties-sitting-on-ether-cards-e03fb5aba28b">this great community guide</a> for how!</p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
