Remove worldbuilders message

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ layout: default
 					</h4>
 					<ul class="table-list">
 						<li>2017 Seasonal design with spot gloss snowflakes</li>
-						<li><em>100% of profits to <a href="https://worldbuilders.org/">Worldbuilders</a> charity!</em></li>
-						<li>Gift sleeve &amp; worldwide postage included</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
 					</ul>
 					<div class="table-buy">
 						<input type="button" value="Buy Now" onclick="addProduct({id: 96580469, quantity: 2})">
