--- a/index.html
+++ b/index.html
@@ -57,28 +57,10 @@ layout: default
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
-				<p>Thinking of giving a Crypto Kitty for the holidays? See <a href="https://medium.com/@judithESSS/how-to-get-started-with-cryptokitties-sitting-on-ether-cards-e03fb5aba28b">this great community guide</a> for how!</p>
+				<p><em>Ether Cards are away for the holidays! We'll resume shipping on January 2.</em></p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
-			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-				<div class="pricing-table">
-					<h3 class="pricing-title">Seasonal Design</h3>
-					<img src="/img/xmas-2017.png" style="width: 298px; height: 191px;">
-					<h4 class="price">
-						£3.00<br>
-						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-					</h4>
-					<ul class="table-list">
-						<li>2017 Seasonal design with spot gloss snowflakes</li>
-						<li>Gift sleeve included</li>
-						<li>Includes postage anywhere in the world</li>
-					</ul>
-					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 96580469, quantity: 2})">
-					</div>
-				</div>
-			</div>
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Original Design</h3>
@@ -99,24 +81,22 @@ layout: default
 			</div>
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
-					<h3 class="pricing-title">MyEtherWallet Holiday Design</h3>
-					<img src="/img/mew_xmas_front.png" style="width: 298px; height: 191px;">
+					<h3 class="pricing-title">MyEtherWallet Design</h3>
+					<img src="/img/mew_front.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
 						£3.00<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
-						<li>Limited-edition seasonal design for MyEtherWallet</li>
+						<li>Limited-edition design for MyEtherWallet</li>
 						<li>Super premium matte finish with foil logo</li>
 						<li>£0.50 from each sale goes to supporting MEW</li>
 					</ul>
 					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 97486127, quantity: 2})">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 90670371, quantity: 2})">
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="pricing-wrapper row">
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Larger Quantities</h3>
