--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
-				<p><em>Ether Cards are away for the holidays! We'll resume shipping on January 2.</em></p>
+				<p><em>We're having slight stock issues at the moment - orders placed now should ship by January 12</em></p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
