--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 			<div class="col-md-4 text-center">
 				<i class="font-icon ion-happy"></i>
 				<h4>Give it as a gift</h4>
-				<p>The card can be redeemed using MyEtherWallet or our own token sweeping tool.</p>
+				<p>The card can be redeemed using MyCrypto, MyEtherWallet, or our own token sweeping tool.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -76,24 +76,6 @@ layout: default
 					</ul>
 					<div class="table-buy">
 						<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-				<div class="pricing-table">
-					<h3 class="pricing-title">MyEtherWallet Design</h3>
-					<img src="/img/mew_front.png" style="width: 298px; height: 191px;">
-					<h4 class="price">
-						£3.00<br>
-						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-					</h4>
-					<ul class="table-list">
-						<li>Limited-edition design for MyEtherWallet</li>
-						<li>Super premium matte finish with foil logo</li>
-						<li>£0.50 from each sale goes to supporting MEW</li>
-					</ul>
-					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 90670371, quantity: 2})">
 					</div>
 				</div>
 			</div>
@@ -148,15 +130,15 @@ layout: default
 		</div>
 		<div class="row">
 			<div class="col-md-5 text-justify">
-				<h2>Using MyEtherWallet</h2>
-				<p>Go to <a href="https://www.myetherwallet.com/#send-transaction">www.myetherwallet.com</a>, and click "Send Ether". Under "Select the format of your private key", choose "Mnemonic Phrase". Enter the phrase on the back of your card, and click "Unlock".</p>
+				<h2>Using MyCrypto</h2>
+				<p>Go to <a href="https://www.mycrypto.com/#send-transaction">www.mycrypto.com</a>, and click "Send Ether". Under "Select the format of your private key", choose "Mnemonic Phrase". Enter the phrase on the back of your card, and click "Unlock".</p>
 				<p>If your card has a QR code instead of a phrase, see the <a href="/#redeem-old">instructions for redeeming a classic ether card</a>.</p>
 				<p>When you click Unlock, you will be presented with a list of addresses and balances. The first address in the list (already selected) will match the one printed on the card. Click "Unlock".</p>
 				<p>You will be shown information about your Ether Card account, including account balances, and a form to send funds to other Ethereum accounts. You can also send tokens using "Send Tokens" in the menu at the top of the screen.</p>
-				<p>We highly recommend generating a new wallet - either using MyEtherWallet, or the client of your choice - and transferring your funds onto that account. Remember to back up your accounts!</p>
+				<p>We highly recommend generating a new wallet - either using MyCrypto, or the client of your choice - and transferring your funds onto that account. Remember to back up your accounts!</p>
 			</div>
 			<div class="col-md-6 col-md-offset-1">
-				<img src="/img/mew-mnemonic.png" alt="" title="" class="img-responsive" />
+				<img src="/img/mc-mnemonic.png" alt="" title="" class="img-responsive" />
 			</div>
 		</div>
 	</div>
