--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
 		<div class="pricing-wrapper row">
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
-					<h3 class="pricing-title">Original Design</h3>
-					<img src="/img/new_front.png" style="width: 298px; height: 191px;">
+					<h3 class="pricing-title">Seasonal Design</h3>
+					<img src="/img/xmas-2018.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
 						£2.50<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
-						<li>Original ether.cards design</li>
+						<li>Seasonal ether.cards design</li>
 						<li>Gift sleeve included</li>
 						<li>Includes postage anywhere in the world</li>
 					</ul>
 					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 96580469, quantity: 2})">
 					</div>
 				</div>
 			</div>
@@ -154,7 +154,6 @@
 					<ul class="table-list">
 						<li>Larger quantities available</li>
 						<li>Stock or custom design</li>
-						<li>Preloading available</li>
 					</ul>
 					<div class="table-buy">
 						<a href="mailto:cards@arachnidlabs.com">Contact Us</a>
