--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Seasonal Design</h3>
-					<img src="/img/xmas-2018.png" style="width: 298px; height: 191px;">
+					<img src="/img/seasonal.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
 						£2.50<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
