--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
 			<div class="col-md-12 title">
 				<h2>Buy now</h2>
 				<p>Ether cards are available for purchase now, with free worldwide shipping and a minimum order of just two cards.</p>
-				<p><em>We're having slight stock issues at the moment - orders placed now should ship by January 12</em></p>
 			</div>
 		</div>
 		<div class="pricing-wrapper row">
@@ -134,7 +133,7 @@
 					<h3 class="pricing-title">Seasonal Design</h3>
 					<img src="/img/seasonal.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
-						£2.50<br>
+						USD 3.50<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
@@ -156,7 +155,7 @@
 						<li>Stock or custom design</li>
 					</ul>
 					<div class="table-buy">
-						<a href="mailto:cards@arachnidlabs.com">Contact Us</a>
+						<a href="mailto:cards@akomba.com">Contact Us</a>
 					</div>
 				</div>
 			</div>
