--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<title>ether.cards</title>
     <meta name="description" content="Ether, crystallized.">
     <meta name="author" content="Arachnid Labs">
-    
+
     <link rel="canonical" href="https://ether.cards/">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link href="/img/favicon.png" rel="icon">
 
 	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/ionicons.css" rel="stylesheet">	
-	<link href="/css/style.css" rel="stylesheet"> 
+	<link href="/css/ionicons.css" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,200,600,600italic,700">
@@ -30,7 +30,7 @@
 		<script src="/js/respond.js"></script>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<![endif]-->
-	
+
 	<script type="text/javascript" src="//code.jquery.com/jquery-2.1.0.min.js"></script>	<script type="text/javascript">window.jQuery || document.write('<script src="/js/jquery-2.1.0.min.js"><\/script>')</script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -43,7 +43,7 @@
 	</script>
 </head>
 
-<body data-spy="scroll" data-target=".navigation">	
+<body data-spy="scroll" data-target=".navigation">
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container">
 				<div class="navbar-header">
@@ -133,7 +133,7 @@
 					<h3 class="pricing-title">Seasonal Design</h3>
 					<img src="/img/seasonal.png" style="width: 298px; height: 191px;">
 					<h4 class="price">
-						USD 3.50<br>
+						3.50 USD<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
