--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<h3 class="pricing-title">Larger Quantities</h3>
 					<h4 class="price">Enquire<br/>&nbsp;</h4>
 					<ul class="table-list">
-						<li>Larger quantities available</li>
+						<li>Larger quantities available (Minimum order of 250 cards)</li>
 						<li>Stock or custom design</li>
 					</ul>
 					<div class="table-buy">
