--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>ether.cards</title>
     <meta name="description" content="Ether, crystallized.">
-    <meta name="author" content="Arachnid Labs">
+    <meta name="author" content="Akomba Labs">
 
     <link rel="canonical" href="https://ether.cards/">
 
@@ -298,8 +298,7 @@
 					<i class="ion-ios-help-outline"></i>
 					<h4>What about customised cards?</h4>
 					<div class="answer">
-						<p>Yes! We offer customised cards in quantities starting at 100. <a href="mailto:cards@arachnidlabs.com">Contact us</a> for more details.</p>
-						<p>We're planning to offer individually customised cards with your photo or image in the future.</p>
+						<p>Yes! We offer customised cards in quantities starting at 250. <a href="mailto:cards@akomba.com">Contact us</a> for more details.</p>
 					</div>
 				</div>
 				<div class="faq-body">
@@ -362,13 +361,13 @@
 			<div class="row">
 				<div class="col-md-4 col-sm-12">
 					<h3>Ether Cards</h3>
-					<p>Ether Cards is a project of <a href="mailto:nick@arachnidlabs.com">Nick Johnson</a> and <a href="http://www.arachnidlabs.com/">Arachnid Labs</a>.</p>
+					<p>Ether Cards is a project of <a href="http://www.akomba.com/">Akomba Labs</a> </p>
 				</div>
 				<div class="col-md-2 col-sm-3 col-xs-6">
 					<h3>Social</h3>
 					<ul class="quick-links">
 						<li><a href="https://twitter.com/ether_cards">Twitter</a></li>
-						<li><a href="mailto:cards@arachnidlabs.com">Email</a></li>
+						<li><a href="mailto:cards@akomba.com">Email</a></li>
 					</ul>
 				</div>
 				<div class="col-md-2 col-sm-3 col-xs-6">
@@ -384,7 +383,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-sm-12">
-					<p>&copy; 2016 Arachnid Labs Ltd. All Right Reserved</p>
+					<p>&copy; 2018 Akomba Labs Pte Ltd. All Rights Reserved</p>
 				</div>
 				<div class="col-md-6 col-sm-12">
 					<p class="copyright">Theme made with <i class="ion-heart"></i> by <a href="http://www.simplesphere.net"> Simplesphere</a></p>
