--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 					<div class="pricing-table">
 						<h3 class="pricing-title">Singapore Design</h3>
-						<img src="/img/singapore.png" style="width: 298px; height: 191px;">
+						<img src="/img/sg.png" style="width: 298px; height: 191px;">
 						<h4 class="price">
 							3.50 USD<br>
 							<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
