--- a/index.html
+++ b/index.html
@@ -165,6 +165,25 @@
 						</div>
 					</div>
 				</div>
+				<div class="pricing-wrapper row">
+					<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+						<div class="pricing-table">
+							<h3 class="pricing-title">Toucan Design</h3>
+							<img src="/img/toucan.png" style="width: 298px; height: 191px;">
+							<h4 class="price">
+								3.50 USD<br>
+								<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+							</h4>
+							<ul class="table-list">
+								<li>Toucan ether.cards design</li>
+								<li>Gift sleeve included</li>
+								<li>Includes postage anywhere in the world</li>
+							</ul>
+							<div class="table-buy">
+								<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
+							</div>
+						</div>
+					</div>
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Larger Quantities</h3>
