fix for the misaligned cards

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/ionicons.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
+	<link href="/css/ethercards.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,200,600,600italic,700">
@@ -131,7 +132,7 @@
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Seasonal Design</h3>
-					<img src="/img/seasonal.png" style="width: 298px; height: 191px;">
+					<img src="/img/seasonal.png"">
 					<h4 class="price">
 						3.50 USD<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
@@ -146,83 +147,86 @@
 					</div>
 				</div>
 			</div>
-			<div class="pricing-wrapper row">
-				<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-					<div class="pricing-table">
-						<h3 class="pricing-title">Singapore Design</h3>
-						<img src="/img/sg.png" style="width: 298px; height: 191px;">
-						<h4 class="price">
-							3.50 USD<br>
-							<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-						</h4>
-						<ul class="table-list">
-							<li>Singapore ether.cards design</li>
-							<li>Gift sleeve included</li>
-							<li>Includes postage anywhere in the world</li>
-						</ul>
-						<div class="table-buy">
-							<input type="button" value="Buy Now" onclick="addProduct({id: 95839242, quantity: 2})">
-						</div>
+			
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">Singapore Design</h3>
+					<img src="/img/sg.png"">
+					<h4 class="price">
+						3.50 USD<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Singapore ether.cards design</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 95839242, quantity: 2})">
 					</div>
 				</div>
-				<div class="pricing-wrapper row">
-					<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-						<div class="pricing-table">
-							<h3 class="pricing-title">Toucan Design</h3>
-							<img src="/img/toucan.png" style="width: 298px; height: 191px;">
-							<h4 class="price">
-								3.50 USD<br>
-								<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-							</h4>
-							<ul class="table-list">
-								<li>Toucan ether.cards design</li>
-								<li>Gift sleeve included</li>
-								<li>Includes postage anywhere in the world</li>
-							</ul>
-							<div class="table-buy">
-								<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
-							</div>
-						</div>
+			</div>
+
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">Toucan Design</h3>
+					<img src="/img/toucan.png"">
+					<h4 class="price">
+						3.50 USD<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Toucan ether.cards design</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 82436775, quantity: 2})">
 					</div>
-					<div class="pricing-wrapper row">
-						<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-							<div class="pricing-table">
-								<h3 class="pricing-title">DevCon4 Prague Design</h3>
-								<img src="/img/devcon.png" style="width: 298px; height: 191px;">
-								<h4 class="price">
-									3.50 USD<br>
-									<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-								</h4>
-								<ul class="table-list">
-									<li>DevCon4 Prague ether.cards design</li>
-									<li>Gift sleeve included</li>
-									<li>Includes postage anywhere in the world</li>
-								</ul>
-								<div class="table-buy">
-									<input type="button" value="Sold Out" onclick="addProduct({id: 95839254, quantity: 2})">
-								</div>
-							</div>
-						</div>
-						<div class="pricing-wrapper row">
-							<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
-								<div class="pricing-table">
-									<h3 class="pricing-title">Ethereum Space Design</h3>
-									<img src="/img/ethereumspace.png" style="width: 298px; height: 191px;">
-									<h4 class="price">
-										3.50 USD<br>
-										<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
-									</h4>
-									<ul class="table-list">
-										<li>Ethereum Space ether.cards design</li>
-										<li>Gift sleeve included</li>
-										<li>Includes postage anywhere in the world</li>
-									</ul>
-									<div class="table-buy">
-										<input type="button" value="Coming Soon" onclick="addProduct({id: 82436775, quantity: 2})">
-									</div>
-								</div>
-							</div>
-			<div class="pricing-wrapper row">
+				</div>
+			</div>
+		</div>
+
+		<div class="pricing-wrapper row">
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">DevCon4 Prague Design</h3>
+					<img src="/img/devcon.png"">
+					<h4 class="price">
+						3.50 USD<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>DevCon4 Prague ether.cards design</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Sold Out" onclick="addProduct({id: 95839254, quantity: 2})">
+					</div>
+				</div>
+			</div>
+
+						
+			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
+				<div class="pricing-table">
+					<h3 class="pricing-title">Ethereum Space Design</h3>
+					<img src="/img/ethereumspace.png"">
+					<h4 class="price">
+						3.50 USD<br>
+						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+					</h4>
+					<ul class="table-list">
+						<li>Ethereum Space ether.cards design</li>
+						<li>Gift sleeve included</li>
+						<li>Includes postage anywhere in the world</li>
+					</ul>
+					<div class="table-buy">
+						<input type="button" value="Coming Soon" onclick="addProduct({id: 82436775, quantity: 2})">
+					</div>
+				</div>
+			</div>
+			
 			<div class="col-md-4 col-md-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="pricing-table">
 					<h3 class="pricing-title">Larger Quantities</h3>
@@ -237,7 +241,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+
 </section>
 <section id="verify" class="section">
 	<div class="container">
