replace some icons

--- a/index.html
+++ b/index.html
@@ -95,17 +95,26 @@
 		</div>
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<i class="font-icon ion-email"></i>
+				<!-- <i class="font-icon ion-email"></i> -->
+				<div class="icons">
+					<img src="/img/icon-01.png" alt="">
+				</div>
 				<h4>Get your Ether Cards</h4>
 				<p>Buy them <a href="#pricing">here</a> with free shipping.</p>
 			</div>
 			<div class="col-md-4 text-center">
-				<i class="font-icon ion-card"></i>
+				<!-- <i class="font-icon ion-card"></i> -->
+				<div class="icons">
+					<img src="/img/icon-02.png" alt="">
+				</div>
 				<h4>Load a card with tokens or Ether</h4>
 				<p>Load an Ether Card from any wallet that supports scanning QR codes.</p>
 			</div>
 			<div class="col-md-4 text-center">
-				<i class="font-icon ion-happy"></i>
+				<!-- <i class="font-icon ion-happy"></i> -->
+				<div class="icons">
+					<img src="/img/icon-03.png" alt="">
+				</div>
 				<h4>Give it as a gift</h4>
 				<p>The card can be redeemed using MyCrypto, MyEtherWallet, or our own token sweeping tool.</p>
 			</div>
