header image attached to the body element

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</div>
 	</nav>
 
-	<section id="top-banner" class="section padding-120 bg-banner">
+	<section id="top-banner" class="section padding-120">
 	<div class="bg-overlay"></div>
 	<div class="container">
 		<div class="row banner-content left-align">
@@ -84,7 +84,7 @@
 	</div>
 </section>
 
-<section id="intro" class="section nopadding-bottom">
+<section id="intro" class="section nopadding-bottom  bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1 title">
