Devcon4 Collectible Update

--- a/index.html
+++ b/index.html
@@ -202,16 +202,16 @@
 					<h3 class="pricing-title">DevCon4 Prague Design</h3>
 					<img src="/img/devcon.png"">
 					<h4 class="price">
-						3.50 USD<br>
+						5.00 USD<br>
 						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
 					</h4>
 					<ul class="table-list">
-						<li>DevCon4 Prague ether.cards design</li>
-						<li>Gift sleeve included</li>
+						<li>Limited Edition DevCon4 Collectible</li>
+						<li>Availible only until 4th November 2018</li>
 						<li>Includes postage anywhere in the world</li>
 					</ul>
 					<div class="table-buy">
-						<input type="button" value="Sold Out" onclick="addProduct({id: 95839254, quantity: 2})">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 95839254, quantity: 2})">
 					</div>
 				</div>
 			</div>
