Min Order Removed

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<img src="/img/devcon.png"">
 					<h4 class="price">
 						5.00 USD<br>
-						<sup>or pay in ETH, ETC or BTC.<br>Min order 2.</sup>
+						<sup>or pay in ETH, ETC or BTC.</sup>
 					</h4>
 					<ul class="table-list">
 						<li>Limited Edition DevCon4 Collectible</li>
@@ -211,7 +211,7 @@
 						<li>Includes postage anywhere in the world</li>
 					</ul>
 					<div class="table-buy">
-						<input type="button" value="Buy Now" onclick="addProduct({id: 95839254, quantity: 2})">
+						<input type="button" value="Buy Now" onclick="addProduct({id: 95839254, quantity: 1})">
 					</div>
 				</div>
 			</div>
