--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		</div>
 
 </section>
-<section id="verify" class="section">
+<section id="verify" class="section bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 title">
@@ -276,7 +276,7 @@
 		</div>
 	</div>
 </section>
-<section id="redeeming" class="section">
+<section id="redeeming" class="section bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 title">
@@ -299,13 +299,14 @@
 		</div>
 	</div>
 </section>
-<section id="redeem-old">
+<section id="redeem-old" class="bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 title">
 				<h2>Redeeming your classic Ether Card</h2>
 			</div>
 		</div>
+		
 		<div class="row">
 			<div class="col-md-5 text-justify">
 				<h2>JAXX</h2>
@@ -340,7 +341,10 @@
 				<img src="/img/jaxx-4.png" alt="" title="" class="img-responsive" />
 			</div>
 		</div>
-<section id="faq" class="section">
+	</div>
+</section>
+
+<section id="faq" class="section bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 title">
