--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <section id="pricing" class="section paddingbottom-60 bg-grey">
 	<div class="container">
-		
+
 		<div class="row">
 			<div class="col-md-12 title">
 				<h1>Buy now</h1>
@@ -253,7 +253,7 @@
 						<li>Stock or custom design</li>
 					</ul>
 					<div class="table-buy">
-						<a href="mailto:cards@akomba.com">Contact Us</a>
+						<a href="mailto:cards@ether.cards">Contact Us</a>
 					</div>
 				</div>
 			</div>
@@ -292,7 +292,7 @@
 				<h1>Redeeming your classic Ether Card</h1>
 			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="col-md-5 text-justify">
 				<h2>JAXX</h2>
@@ -357,7 +357,7 @@
 					<i class="ion-ios-help-outline"></i>
 					<h4>What about customised cards?</h4>
 					<div class="answer">
-						<p>Yes! We offer customised cards in quantities starting at 250. <a href="mailto:cards@akomba.com">Contact us</a> for more details.</p>
+						<p>Yes! We offer customised cards in quantities starting at 250. <a href="mailto:cards@ether.cards">Contact us</a> for more details.</p>
 					</div>
 				</div>
 				<div class="faq-body">
@@ -426,7 +426,7 @@
 					<h3>Social</h3>
 					<ul class="quick-links">
 						<li><a href="https://twitter.com/ether_cards">Twitter</a></li>
-						<li><a href="mailto:cards@akomba.com">Email</a></li>
+						<li><a href="mailto:cards@ether.cards">Email</a></li>
 					</ul>
 				</div>
 				<div class="col-md-2 col-sm-3 col-xs-6">
