--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="/css/ionicons.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 	<link href="/css/ethercards.css" rel="stylesheet">
+	<meta name="p:domain_verify" content="a5e8f97b3c59fb1e69a4b3f3e3321726"/>
 
 <!-- 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,200,600,600italic,700">
