commenting out verify

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<li><a href="/#top-banner">Home</a></li>
 					<li><a href="/#features">Features</a></li>
 					<li><a href="/#pricing">Buy now</a></li>
-					<li><a href="/#verify">Verify</a></li>
+					<!--<li><a href="/#verify">Verify</a></li>-->
 					<li><a href="/#redeeming">Redeeming</a></li>
 					<li><a href="/#faq">FAQ</a></li>
 					<li><a href="/blog/">Blog</a></li>
