--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ether.cards</title>
-    <meta name="description" content="Ether, crystallized.">
+    <meta name="description" content="Ether. Great on the blockchain, even better in your hands.">
     <meta name="author" content="Akomba Labs">
 
     <link rel="canonical" href="https://ether.cards/">
@@ -79,7 +79,7 @@
 		<div class="row banner-content left-align">
 
 			<div class="col-md-6">
-				<h1>Ether, Crystallized.</h1>
+				<h1>Ether - Great on the blockchin, even better in your hands.</h1>
 				<h3></h3>
 			</div>
 
@@ -92,7 +92,7 @@
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1 title">
 
-				<h1>Give the gift of Ether</h1>
+				<h1>Give the gift of Ether.</h1>
 				<p>Ether cards are 'physical ether'. They're a quick and convenient way to give ether, tokens, or other blockchain assets to friends and family, and a great way to introduce people to the power of the Ethereum blockchain.</p>
 			</div>
 		</div>
@@ -377,6 +377,7 @@
 						<p>We order in 'blanks' - cards with everything but the keypair printed - and print the keypairs ourselves in small batches. The generation process is done entirely in memory and streamed to the printer on a secure computer. You can examine the code for generating cards <a href="https://github.com/ethercards/printer">here</a>.</p>
 						<p>The keypairs are printed, and then the scratch panel applied in a single operation using an IDP Smart 70 card printer. The black ribbon - which contains a negative image of everything it prints - is locked securely in the printer, which is chained to an immovable object. When the ribbon is used up, it's securely destroyed.</p>
 						<p>While we're confident in the security and integrity of the keypairs on Ether Cards, we do not recommend storing large amounts of cryptocurrency on them. Ether Cards are intended to be used for low value gifts and payments, and as an easy way to introduce people to the power of the Ethereum blockchain.</p>
+						<p>For additional assurance, we provide a guarantee: Some ether from the sale of each card is set aside in a contract account for a year from the date of production. You can verify that a deposit on your card has been paid using <a href="#verify">this tool</a>. If presented with an Ether Card whose private key panel is undamaged, but whose account has outgoing transactions, or a card whose private key is illegible, we will refund to you from the guarantee account the balance stored on the card before the first outgoing transaction, up to a maximum of 50 times the amount of the deposit. We reserve the right to adjust the maximum amount of this guarantee as the price of Ether fluctuates over time.</p>
 					</div>
 				</div>
 			</div>
