--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<div class="row banner-content left-align">
 
 			<div class="col-md-6">
-				<h1>Ether - Great on the blockchin, even better in your hands.</h1>
+				<h3>Ether - Great on the blockchain, even better in your hands.</h3>
 				<h3></h3>
 			</div>
 
