12 days of Crypto Christmas banner added

--- a/index.html
+++ b/index.html
@@ -90,8 +90,13 @@
 <section id="intro" class="section nopadding-bottom  bg-grey">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1 title">
+			<div class="col-md-10 col-md-offset-1 mb-40" id="tmp-banner">
+				<img src="/img/cc.jpg" alt="12 days of crypto christmas">
+			</div>
+		</div>
 
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1 title">
 				<h1>Give the gift of Ether</h1>
 				<p>Ether cards are 'physical ether'. They're a quick and convenient way to give ether, tokens, or other blockchain assets to friends and family, and a great way to introduce people to the power of the Ethereum blockchain.</p>
 			</div>
