--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="row">
             <div class="col-md-6 offset-md-3">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DYefvkNiKbA?rel=0" allowfullscreen></iframe>
+                <video src="video/ethercards.mp4" controls controlslist="nodownload" preload="metadata" playsinline></video>
               </div>
             </div>
           </div>
