--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <li class="nav-item"><a  class="scroll-link nav-link" href="#card-types">Card types</a></li>
               <li class="nav-item"><a  class="scroll-link nav-link" href="#clients">Clients</a></li>
               <li class="nav-item"><a  class="scroll-link nav-link" href="#contact-us">Contact Us</a></li>
+              <li class="nav-item"><a  class="nav-link" href="https://medium.com/ether-cards" target="_blank">Blog</a></li>
               <li class="nav-item"><a  class="nav-link cart" href="#!/~/cart">Shopping cart<span class="cart-item-counter">0</span></a></li>
              <!--  <li class="nav-item"><a  class="nav-link cart" href="#!/~/cart"><span class="cart-image"></span><span class="cart-item-counter">0</span></a></li> -->
             </ul>
