--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="row">
             <div class="col-md-6 offset-md-3">
               <div class="embed-responsive embed-responsive-16by9">
-                <video src="video/ethercards.mp4" controls controlslist="nodownload" preload="metadata" playsinline></video>
+                <video poster="img/video_poster.jpg" src="video/ethercards.mp4" controls controlslist="nodownload" preload="metadata" playsinline></video>
               </div>
             </div>
           </div>
