instagram link added to the footer

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
               <div>
                   <a  class="footer-social-link" target="_blank" id="twitter" href="https://twitter.com/ether_cards"></a>
                   <a  class="footer-social-link" target="_blank" id="akomba" href="https://akomba.com"></a>
+                  <a  class="footer-social-link" target="_blank" id="insta" href="https://www.instagram.com/ether.cards/"></a>
               </div>
             </div>
           </div>
