--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 Includes postage anywhere in the world<br>
                                 Minimium order 2 pc</p>
 
-                              <button class="card-buy-button disabled">COMING SOONN</button>
+                              <button class="card-buy-button disabled">COMING SOON</button>
                               
                           </div>
                       </div>
